force-app/main/default/objects/L_PR_Opportunity_Affiliation_Relation__c/L_PR_Opportunity_Affiliation_Relation__c.object-meta.xml
<CustomObject>
    <description>Opportunity Affiliation Relationship</description>
    <label>Opportunity Affiliation Relationship</label>
    <nameField>
        <displayFormat>OA-{00000}</displayFormat>
        <label>Opportunity Affiliation Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Affiliation Relationship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>