force-app/main/default/objects/L_PR_Opportunity_Affiliation_Relation__c/fields/L_PR_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Opportunity__c</fullName>
    <label>Opportunity Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select PRM Opportunity</errorMessage>
        <filterItems>
            <field>Opportunity.RecordType.Name</field>
            <operation>equals</operation>
            <value>PRM Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Affiliation Relationship</relationshipLabel>
    <relationshipName>Opportunity_Affiliation_Relationship</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>