force-app/main/default/objects/L_PR_Opportunity_Affiliation_Relation__c/fields/L_PR_Opportunity_Role__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Opportunity_Role__c</fullName>
    <label>Opportunity Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>